# BrownfieldCartographer

./: .gitignore  FINAL_REPORT.md  PRODUCTION_PLAN.md  README.md  RECONNAISSANCE.md  SYSTEM_MAP.md  pyproject.toml
.cartography/MeltanoCodebase/.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md  state.json
.cartography/ol-data-platformCodebase/.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md  (+1 more)
backend/: __init__.py  main.py  sessions.py  workspace_api.py  workspace_data.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts  utils.ts  vite-env.d.ts
src/: cli.py  orchestrator.py  repo.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  git_history.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  data_lineage_graph.py  knowledge_graph.py
src/models/: __init__.py  schemas.py
src/visualization/: graph_viz.py
tests/: __init__.py  conftest.py  test_agents.py  test_analyzers.py  test_cli.py  test_end_to_end_snapshots.py  test_git_history.py  test_hydrologist_queries.py  test_knowledge_graph_storage.py  test_orchestrator.py  test_repo_resolution.py  test_webui.py  test_webui_server_discovery.py  test_webui_sessions.py
tests/golden/: jaffle-shop_artifact_summary.json  jaffle_shop_artifact_summary.json  mini_repo_artifact_summary.json
(+23 files in other folders)
