[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Brownfield Cartographer: codebase intelligence for FDE onboarding"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "networkx>=3.3",
  "pydantic>=2.8",
  "pyyaml>=6.0.2",
  "sqlglot>=25.0.0",
  "typer>=0.12.5",
  "rich>=13.8.1",
  "scikit-learn>=1.5.1",
  "tree-sitter>=0.22.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-sql>=0.3.0",
  "tree-sitter-yaml>=0.7.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-typescript>=0.23.2",
  "jedi>=0.19.1",
  "gitpython>=3.1.43",
  "nbformat>=5.10.4",
  "ollama>=0.3.2",
  "pyvis>=0.3.2",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6"
]

[project.optional-dependencies]
llm = [
  "langgraph>=0.2.0"
]

parsers = [
  "tree-sitter-languages>=1.10.2"
]

dev = [
  "pytest>=8.3.0"
]

[project.scripts]
cartographer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src", "backend"]
